# fotos-backend

./: .gitignore  Cargo.toml  README.md  TODO.md
migrations/: 20230526062115_initial.sql  20230601063526_tags.sql
src/: handlers.rs  infrastructure.rs  lib.rs  main.rs  test_utils.rs
src/api/: error.rs
src/handlers/: data.rs  mod.rs  tags.rs  tests.rs
src/handlers/data/: imgs.rs  tests.rs
src/handlers/tags/: crud.rs  files.rs  models.rs
src/handlers/tags/crud/: tests.rs
src/handlers/tags/files/: tests.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
