[package]
name = "fotos-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = [ "query" ] }
bytes = "1"
confy = "0.5"
image = "0"
mime = "0.3"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features =["fs"] }
tokio-util = { version = "0", features=["io"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tower-http = { version = "0", features = ["trace"] }

[dev-dependencies]
ring = "0"
http-body = "0"