[package]
name = "fotos-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "fotos-backend"
path = "src/main.rs"

[features]
turbojpeg = ["dep:turbojpeg"]

[dependencies]
test-macro = { path = "test-macro" }
anyhow = "1.0"
axum = { version = "0.6", features = [ "query", "tokio" ] }
bytes = "1"
confy = "0.5"
futures-util = "0"
image = "0"
mime = "0.3"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features =["fs"] }
tokio-util = { version = "0", features=["io"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
turbojpeg = {version = "0", features = ["image"], optional = true }
tower-http = { version = "0", features = ["trace"] }
uuid = { version = "1", features = ["v4", "fast-rng"]}

[dev-dependencies]
http-body = "0"
ring = "0"
rstest = { version = "0" }
